exports[`TextLink React component Renders Augmented correctly 1`] = `
<a
  className="textlink"
  href="http://numenta.com"
  onClick={[Function instrumentOnClick]}
  target="_blank">
  Numenta Homepage
</a>
`;

exports[`TextLink React component Renders Default correctly 1`] = `
<a
  className="textlink"
  href="http://numenta.com"
  onClick={[Function instrumentOnClick]}
  target={undefined}>
  Numenta Homepage
</a>
`;
